# loops

./: .gitignore  CMakeLists.txt  CMakePresets.json  DESIGN.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yml  clang-format.yml  site.yml  ubuntu-20.04.yml  ubuntu-22.04.yml  ubuntu-latest.yml  ubuntu.yml  windows-2019.yml  windows-2022.yml  windows-latest.yml  windows.yml
benchmarks/: CMakeLists.txt
benchmarks/spmv/: CMakeLists.txt  parameters.hxx  parameters.hxx.prehip  work_oriented.cu
cmake/: FetchCCCL.cmake  FetchCXXOpts.cmake  FetchCatch2.cmake  FetchGoogleTest.cmake  FetchHIP.cmake  FetchNVBench.cmake  FetchROCSparse.cmake  FetchThrustCUB.cmake
datasets/: suitesparse.txt
docker/: Dockerfile  README.md  dockerfile
docs/: abstraction.md  background.md  build.md  datasets.md  experimentation.md  loadbalancing_api.md  performance_evaluation.ipynb  reproducing-results.md  requirements.txt
docs/data/: group_mapped.csv  heuristics.csv  merge_path.csv  thread_mapped.csv
examples/: CMakeLists.txt  Makefile  saxpy.cu
examples/range/: CMakeLists.txt  range.cu
examples/saxpy/: CMakeLists.txt  saxpy.cu
examples/spgemm/: CMakeLists.txt  filter_zeros.ipynb  helpers.hxx  run.sh  running_time.txt  test_spgemm.cpp  thread_mapped.cu  validate_spgemm.ipynb
examples/spgemm/running_time/dense_C/: running_time_2023-11-06.txt  testing.txt
examples/spmm/: CMakeLists.txt  helpers.hxx  mtx_B.txt  mxt_C.txt  thread_mapped.cu  thread_mapped.cu.prehip
examples/spmv/: CMakeLists.txt  bcsr_thread_mapped.cu  coo_thread_mapped.cu  csc_thread_mapped.cu  custom_layout.cu  dia_thread_mapped.cu  ell_merge_path.cu  ell_thread_mapped.cu  flat_partitioned.cu  group_mapped.cu  helpers.hxx  merge_path.cu  original.cu  rocsparse.cu  spmv.cu  spmv.hxx  thread_mapped.cu  work_oriented.cu
include/loops/: error.hxx  generate.hxx  grid_stride_range.hxx  memory.hxx  range.hxx  schedule.hxx  stride_ranges.hxx
include/loops/algorithms/spgemm/: estimate_nnz_test.cuh  find_explicit_zeros.cuh  thread_mapped.cuh
include/loops/algorithms/spmm/: thread_mapped.cuh  thread_mapped.cuh.prehip
include/loops/algorithms/spmv/: bcsr_thread_mapped.cuh  coo_thread_mapped.cuh  csc_thread_mapped.cuh  dia_thread_mapped.cuh  ell_merge_path.cuh  ell_thread_mapped.cuh  flat_partitioned.cuh  group_mapped.cuh  launch_box.hxx  merge_path_flat.cuh  original.cuh  thread_mapped.cuh  work_oriented.cuh  work_oriented.cuh.prehip
include/loops/backend/: cuda.hxx  hip.hxx  xpu.hxx
include/loops/container/: bcsr.hxx  container.hxx  coo.hxx  coordinate.hxx  csc.hxx  csc.hxx.prehip  csr.hxx  dia.hxx  ell.hxx  formats.hxx  layout.hxx  market.hxx  matrix.cuh  partitioning.hxx  vector.hxx.prehip
include/loops/container/detail/: convert.hxx  convert.hxx.prehip  mapped_file.hxx  mmio.cpp  mmio.cpp.prehip  mmio.hxx  mtx_parser.hxx
include/loops/schedule/: block_mapped.hxx  group_mapped.hxx  merge_path_flat.hxx  merge_path_flat.hxx.prehip  thread_mapped.hxx  tile_mapped.hxx  work_oriented.hxx
include/loops/util/: arch.hxx  coordinate.hxx  device.hxx  device.hxx.prehip  equal.hxx  equal.hxx.prehip  filepath.hxx.prehip  generate.hxx  launch.hxx  launch_box.hxx  math.hxx  reference.hxx  sample.hxx  search.hxx  timer.hxx  xpu.hxx
plots/: performance_evaluation.ipynb
plots/data/: cusparse.csv  versus_cub.csv
scripts/: README.md  format.sh  run.sh  spmv.py
site/: Doxyfile  build.py  requirements.txt
site/content/: build.md  datasets.md  experimentation.md  getting-started.md  reproducing-results.md
site/content/concepts/: abstraction.md  schedules.md
site/static/css/: base.css  components.css  landing.css  layout.css  syntax.css  tokens.css
site/static/js/: copy-code.js  hero-canvas.js  nav-scroll.js  sidebar.js  tabs.js  toc.js
site/templates/: api.html  api_index.html  base.html  landing.html  page.html
unittests/: CMakeLists.txt  layout_contract_test.cu  test_container_bcsr.cu  test_container_coo.cu  test_container_csc.cu  test_container_csr.cu  test_container_dia.cu  test_container_ell.cu  test_format_round_trip.cu  test_helpers.hxx  test_layout_bcsr.cu  test_layout_contract.hxx  test_layout_coo.cu  test_layout_csc.cu  test_layout_csr.cu  test_layout_dia.cu  test_layout_ell.cu  test_layout_flat_partitioner.cu  test_market_loader.cu  test_rigorous_validator.cu  test_schedule_coverage.cu  test_spmv_battery.hxx  test_spmv_bcsr.cu  test_spmv_coo.cu  test_spmv_csc.cu  test_spmv_csr.cu  test_spmv_dia.cu  test_spmv_ell.cu  test_spmv_partitioned.cu  test_spmv_runner.hxx  test_util_math.cu  test_util_range.cu
